main-overview completed and specific roll overview completed

--- a/css/index.scss
+++ b/css/index.scss
@@ -503,6 +503,9 @@ body {
         #e{
             grid-area: e;
         }
+        #developer{
+            grid-area: d;
+        }
         .list-1{
             font-weight: 300;
             cursor: pointer;
