--- a/css/index.scss
+++ b/css/index.scss
@@ -420,10 +420,10 @@ body {
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
-            "t t t a a a a a a a e e"
-            "t t t a a a a a a a e e"
-            "t t t a a a a a a a e e"
-            "t t t a a a a a a a e e";
+            "t t a a a a a a a e e e"
+            "t t a a a a a a a e e e"
+            "t t a a a a a a a e e e"
+            "t t a a a a a a a e e e";
 
         &.overlay {
             pointer-events: none;
