--- a/css/index.scss
+++ b/css/index.scss
@@ -409,7 +409,7 @@ body {
 
         height: calc(100% - 3rem);
         display: grid;
-        grid-gap: .5rem;
+        grid-gap: .3rem;
         grid-template:repeat(9, 120px) / repeat(12, 1fr); /* row / column */
         grid-template-areas: 
             "m m m m m m c c c c s s"
@@ -448,7 +448,7 @@ body {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                // margin: .5em .5em;
+                // margin: .3em .3em;
                 .header{
                     display: flex;
                     justify-content: space-between;
@@ -472,6 +472,13 @@ body {
                     svg{
                         width: 100%;
                         height: 50%;
+                    }
+                }
+                .btn-grp{
+                    display: flex;
+                    flex-direction: column;
+                    button{
+                        margin-top: 1em;
                     }
                 }
         }
@@ -521,3 +528,58 @@ body {
         }
     }
 }
+//==================media q==================
+$phone: 640px; 
+$tablet: 768px;
+$desktop: 1024px;
+
+@media (max-width: $phone) {
+    button{
+        &.v-s {
+            font-size: 0.7rem;
+        }
+    }
+    body{
+        font-size: 13px;
+        header{
+            margin: 0;
+        }
+        #navbar{
+            display: none;
+        }
+        #main-container{
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .card{
+                width: 100%;
+
+                & + .card{
+                    margin-top: .5em;
+                }
+                & > div{
+                    margin-top: .5em;
+                }
+                .img{
+                    display: none;
+                }
+
+                .btn-grp{
+                    flex-direction: row;
+                    justify-content: space-between;
+                    button{
+                        margin: 0;
+                    }
+                }
+
+            }
+            #extra{
+                // display: none;
+            }
+        }
+    }
+}
+
+
