--- a/css/index.scss
+++ b/css/index.scss
@@ -59,6 +59,21 @@ button {
       }
     }
 }
+.btn--jump.is-active {
+    animation: .4s jump ease infinite alternate;
+}
+  
+@keyframes jump {
+    0% {
+      transform: scale(1);
+      box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    }
+    100% {
+      transform: scale(1.05);
+      box-shadow: 0 4px 20px rgba(0,0,0,.1);
+    }
+}
+// ================= input-gate =================
 .gate {
     display: inline-block;
     width: 100%;
@@ -287,7 +302,12 @@ body {
                 border-bottom: 1px solid #fff;
                 padding: .2em 0;
                 margin-right: 1em;
+                // width: 100%;
             }
+        }
+
+        svg{
+            display: none;
         }
     }
 
@@ -415,8 +435,8 @@ body {
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
-            "m m m m m m c c c c s s"
-            "m m m m m m c c c c s s"
+            "m m m m m m c c c c b b"
+            "m m m m m m c c c c b b"
             "t t a a a a a a a e e e"
             "t t a a a a a a a e e e"
             "t t a a a a a a a e e e"
@@ -510,6 +530,9 @@ body {
         #developer{
             grid-area: d;
         }
+        #show_all{
+            grid-area: b;
+        }
         .list-1{
             font-weight: 300;
             cursor: pointer;
@@ -548,16 +571,27 @@ $phone: 640px;
 $tablet: 768px;
 $desktop: 1024px;
 
-@media (max-width: $phone) {
+@media (max-width: $tablet) {
     button{
         &.v-s {
             font-size: 0.7rem;
         }
     }
     body{
-        font-size: 13px;
+        font-size: 11px;
         header{
             margin: 0;
+            .header-logo{
+                display: flex;
+                svg{
+                    display: inline;
+                }
+            }
+            .search-area{
+                .search-input{
+                    width: 9em;
+                }
+            }
         }
         #navbar{
             width: 0;
